--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <spock.version>1.1-groovy-2.4</spock.version>
     <groovy.version>2.5.0-beta-1</groovy.version>
     <cglib-nodep.version>3.2.5</cglib-nodep.version>
+    <junit.version>4.12</junit.version>
   </properties>
 
   <dependencies>
@@ -44,6 +45,19 @@
       <artifactId>cglib-nodep</artifactId>
       <version>${cglib-nodep.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>LATEST</version>
     </dependency>
   </dependencies>
 
