--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <vavr.version>0.9.0</vavr.version>
+    <vavr.version>0.9.1</vavr.version>
     <spock.version>1.1-groovy-2.4</spock.version>
     <groovy.version>2.5.0-beta-1</groovy.version>
     <cglib-nodep.version>3.2.5</cglib-nodep.version>
     <junit.version>4.12</junit.version>
+    <assertj.version>3.8.0</assertj.version>
   </properties>
 
   <dependencies>
@@ -57,7 +58,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>LATEST</version>
+      <version>${assertj.version}</version>
     </dependency>
   </dependencies>
 
